# cust_mana

./: .gitignore  CMakeLists.txt  Customer Management.sln  build.sh  build_gcc34.sh  conanfile.py
Customer Management/: Customer Management.vcxproj  Customer Management.vcxproj.filters  Customer.cpp  Customer.h  Customers.cpp  Customers.h  Software.cpp  Software.h  main.cpp
gcc34_c++98_cmake/: CMakeLists.txt
include/: main_pragma_lib.h
include/core/: Customer.h  Customers.h  Software.h  core_pragma_lib.h
projects/Core/: Core.vcxproj  Core.vcxproj.filters
projects/Customer Management/: Customer Management.vcxproj  Customer Management.vcxproj.filters
src/: main.cpp
src/core/: Customer.cpp  Customers.cpp  Software.cpp
